--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Snowboard OOP</title>
     <link href="style.css" rel="stylesheet">
     <link id="favIcon" rel="icon" href="assets/playerRight.png">
+    <script src="variables.js" defer></script>
     <script src="Game.js" defer></script>
     <script src="Trap.js" defer></script>
     <script src="Modal.js" defer></script>
@@ -16,7 +17,7 @@
     <div id="gameBackground"></div>
     <div id="textContainer">
         <h1>SNOWBOARD GAME</h1>
-        <p class="howToPlay"><strong>Use ⇦ a, ⇨ d, and ⇩ s to move.</strong> </p>
+        <p class="howToPlay"><strong>Use ⇦ a, ⇨ d, and ⇩ s to move.</strong></p>
         <p class="howToPlay"><strong>Use shift to make a short jump. You can use it 3 times.</strong></p>
         <p id="scoreBox"></p>
     </div>
